--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+fallible-iterator = "0.3.0"
 rocket = "0.5.0"
-sqlite = "0.34.0"
+rusqlite = "0.31.0"
