--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ edition = "2021"
 fallible-iterator = "0.3.0"
 rocket = "0.5.0"
 rusqlite = "0.31.0"
+cookie = "0.18.1"
+rocket-jwt-new = "0.6.0"
+jsonwebtoken = "9.3.0"
+syn = "2.0.58"
+quote = "1.0.35"
+serde = {version="1.0.197", features=["derive"]}
