--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 [dependencies]
 fallible-iterator = "0.3.0"
 rocket = "0.5.0"
-rusqlite = "0.31.0"
 cookie = "0.18.1"
 rocket-jwt-new = "0.6.0"
 jsonwebtoken = "9.3.0"
 syn = "2.0.58"
 quote = "1.0.35"
 serde = {version="1.0.197", features=["derive"]}
+sqlx = {version="0.7", features=["runtime-async-std", "tls-rustls", "sqlite", "macros"]}
+pwhash = "1"
