--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ quote = "1.0.35"
 serde = {version="1.0.197", features=["derive"]}
 sqlx = {version="0.7", features=["runtime-async-std", "tls-rustls", "sqlite", "macros"]}
 pwhash = "1"
+rocket_dyn_templates = {version="0.1.0", features=["handlebars"]}
