--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 fallible-iterator = "0.3.0"
-rocket = "0.5.0"
+rocket = {version="0.5.0", features=["json"]}
 cookie = "0.18.1"
 rocket-jwt-new = "0.6.0"
 jsonwebtoken = "9.3.0"
